--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <header>
-            <h1>Encabezado</h1>
+            <h1 id="titulo">Encabezado</h1>
             <nav>
                 <ul>
                     <li><a href="#">Enlace 1</a></li>
