--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <body>
         <header>
             <h1 id="titulo">Encabezado</h1>
-            <nav>
+            <nav id="menuPrincipal">
                 <ul>
                     <li><a href="#">Enlace 1</a></li>
                     <li><a href="#">Enlace 2</a></li>
