--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <section>
             <h2>Sección Principal</h2>
 
-            <article>
+            <article id="principalarticle>
             <h3>Artículo 1</h3>
             <p>Contenido del artículo 1.</p>
             </article>
