--- a/index.html
+++ b/index.html
@@ -8,20 +8,20 @@
     </head>
     <body>
         <header>
-            <h1 id="titulo">Encabezado</h1>
-            <nav id="menuPrincipal">
+            <h1>Encabezado</h1>
+            <nav>
                 <ul>
-                    <li><a href="#" class="enlaceMenuPrincipal">Enlace 1</a></li>
-                    <li><a href="#" class="enlaceMenuPrincipal">Enlace 2</a></li>
-                    <li><a href="#" class="enlaceMenuPrincipal">Enlace 3</a></li>
+                    <li><a href="#">Enlace 1</a></li>
+                    <li><a href="#">Enlace 2</a></li>
+                    <li><a href="#">Enlace 3</a></li>
                 </ul>  
             </nav>  
         </header>            
         <main>
             <section>
-            <h2 class="tituloSeccion">Sección Principal</h2>
+            <h2>Sección Principal</h2>
 
-            <article id="principalarticle>
+            <article>
             <h3>Artículo 1</h3>
             <p>Contenido del artículo 1.</p>
             </article>
